--- a/templates/index.html
+++ b/templates/index.html
@@ -404,4 +404,6 @@
         </div>
     </div>
     <!-- Testimonial End -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+
 {% endblock content %}
